# power_perceiver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  base_environment.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  train_environment.yml
configs/: config.yaml
experiments/: 008_perceiver_IO.py  009_perceiver_IO_include_decoder_query_in_encoder_query.py  010_perceiver_IO_include_decoder_query_in_encoder_query_using_neural_net.py  011_perceiver_IO_include_decoder_query_in_encoder_query_using_neural_net.py  012_perceiver_IO_include_decoder_query_in_encoder_query_using_neural_net.py  013_perceiver_IO_include_decoder_query_in_encoder_query_using_neural_net.py  014_back_to_transformer_encoder.py  015_multiple_timesteps_of_satellite_imagery.py  016_predict_satellite_imagery.py  017_infer_individual_pv_power.py  018_infer_GSP_and_individual_pv_power.py  019_transformer_over_time.py  020_transformer_over_time_without_for_loops.py  021_predict_future_imagery_climatehack.py  022_predict_future_imagery_climatehack_train_from_zarr.py  023_unet_and_power_perceiver.py  024_raw_dataset_unet_and_power_perceiver.py  024a_raw_dataset_unet_and_power_perceiver.py  025_RNN_raw_dataset_unet_and_power_perceiver.py  025_extract_sat_predictor_weights.py  026_dont_train_unet.py  027_debug.py  027_longer_forecasts.py  028_remove_rnn.py  029_more_history_new_model.py
notebooks/: README.md
power_perceiver/: consts.py  dataset.py  exceptions.py  geospatial.py  testing.py  time.py  utils.py  version.py
scripts/: run_ml_experiment.py
tests/: test_dataset.py  (+2 more)
(+135 files in other folders)
