[project]
name = "power_perceiver"
version = "2022.9.7"  # TODO: Make this dynamic! https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
description = "Machine learning experiments to forecast the electricity system (starting with solar)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jack Kelly"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    # Scientific Python
    "numpy",
    "pandas",
    "xarray",
    "h5netcdf",
    "pathy",
    "fsspec",

    # Machine Learning
    "torch",
    "pytorch-lightning",
    "einops",
]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "pre-commit",
    "pydocstyle",
    "isort",
]
train = [
    "matplotlib",
    "pvlib",
    "cartopy",
    "zarr",
    "dask",
    "geopandas",
    "wandb",
    "scikit-learn",
    "pytorch-msssim",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
power_perceiver = "power_perceiver"

[tool.setuptools.packages]
find = {}
